finish first step

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SECRET_KEY='django-insecure-zyotqapubna(+^4qza@+wn!qju8=1)mzd)3l8^vgw$1ntqdi+h'
 DATABASE_URL=postgresql://vadik:666@localhost:5432/hexlet-code
-ALLOWED_HOSTS='webserver'
+DEBUG=True
