--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,12 @@ packages = [{include = "task_manager"}]
 python = "^3.10"
 django = "^4.1.7"
 python-dotenv = "^1.0.0"
-flake8 = "^6.0.0"
+whitenoise = "^6.4.0"
+dj-database-url = "^1.2.0"
 
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
