--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ django = "^4.1.7"
 python-dotenv = "^1.0.0"
 whitenoise = "^6.4.0"
 dj-database-url = "^1.2.0"
+django-bootstrap4 = "^22.3"
+psycopg2-binary = "^2.9.5"
 
 
 [tool.poetry.group.dev.dependencies]
