--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,12 @@ whitenoise = "^6.4.0"
 dj-database-url = "^1.2.0"
 django-bootstrap4 = "^22.3"
 psycopg2-binary = "^2.9.5"
+gunicorn = "^20.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
+django-extensions = "^3.2.1"
 
 [build-system]
 requires = ["poetry-core"]
