--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dj-database-url = "^1.2.0"
 django-bootstrap4 = "^22.3"
 psycopg2-binary = "^2.9.5"
 gunicorn = "^20.1.0"
+django-filter = "^23.1"
 
 
 [tool.poetry.group.dev.dependencies]
