--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install poetry
-          make install
+          poetry install
       - name: Run linter
         run: |
           make lint
