--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ django-extensions = "^3.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
-flake8 = "^6.0.0"
+flake8 = "*"
 
 [build-system]
 requires = ["poetry-core"]
